Extend support for function declaration/definition matching