@@ -142,6 +142,21 @@ public class XstsDerivedFeatures extends ExpressionModelDerivedFeatures {
 		return !clockVariables.isEmpty();
 	}
 	
+	public static boolean hasDefinition(FunctionDeclaration functionDeclaration) {
+		if (functionDeclaration instanceof LambdaDeclaration lambdaDeclaration) {
+			return ExpressionModelDerivedFeatures.hasDefinition(lambdaDeclaration);
+		}
+		if (functionDeclaration instanceof ProcedureDeclaration procedureDeclaration) {
+			return hasDefinition(procedureDeclaration);
+		}
+		throw new IllegalArgumentException("Unknown function: " + functionDeclaration);
+	}
+	
+	public static boolean hasDefinition(ProcedureDeclaration procedureDeclaration) {
+		SequentialAction body = procedureDeclaration.getBody();
+		return body != null;
+	}
+	
 	public static boolean hasSideEffect(FunctionDeclaration function) {
 		return !isPure(function);
 	}
@@ -216,7 +231,7 @@ public class XstsDerivedFeatures extends ExpressionModelDerivedFeatures {
 	}
 	
 	public static List<VariableDeclaration> getLocalVariables(FunctionDeclaration function) {
-		if (function instanceof ProcedureDeclaration procedure) {
+		if (function instanceof ProcedureDeclaration procedure && hasDefinition(function)) {
 			SequentialAction body = procedure.getBody();
 			return getLocalVariables(body);
 		}
@@ -225,7 +240,7 @@ public class XstsDerivedFeatures extends ExpressionModelDerivedFeatures {
 	
 	public static List<VariableDeclaration> getLocalVariables(Action action) {
 		return ecoreUtil.getSelfAndAllContentsOfType(action, VariableDeclarationAction.class)
-				.stream().map(it -> it.getVariableDeclaration()).collect(Collectors.toList());
+				.stream().map(it -> it.getVariableDeclaration()).toList();
 	}
 	
 	public static boolean isLocal(Declaration variable) {
@@ -615,13 +630,17 @@ public class XstsDerivedFeatures extends ExpressionModelDerivedFeatures {
 		FunctionDeclaration function = (FunctionDeclaration) xStsActionUtil.getDeclaration(operand);
 		if (function instanceof LambdaDeclaration lambda) {
 			Expression expression = lambda.getExpression();
-			readVariables.addAll(
-					xStsActionUtil.getReferredVariables(expression));
+			if (expression != null) { // Can be null: declaration
+				readVariables.addAll(
+						xStsActionUtil.getReferredVariables(expression));
+			}
 		}
 		else if (function instanceof ProcedureDeclaration procedure) {
 			SequentialAction body = procedure.getBody();
-			readVariables.addAll(
-					getReadVariables(body));
+			if (body != null) { // Can be null: declaration
+				readVariables.addAll(
+						getReadVariables(body));
+			}
 		}
 		else {
 			throw new IllegalArgumentException("Not known function: " + function);
@@ -899,6 +918,11 @@ public class XstsDerivedFeatures extends ExpressionModelDerivedFeatures {
 			return _getWrittenVariables(_action);
 		}
 		else if (action instanceof FunctionCallAction _action) {
+			FunctionDeclaration function = (FunctionDeclaration) xStsActionUtil.getDeclaration(
+					_action.getFunctionCallExpression().getOperand());
+			if (!hasDefinition(function)) {
+				return Set.of();
+			}
 			return _getWrittenVariables(_action);
 		}
 		else if (action instanceof OpaqueAction) {
